--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,18 @@
 {
-    "name": "Car Counter App",
-    "short_name": "CarCounter",
-    "start_url": ".",
+    "name": "Tailly Up!",
+    "short_name": "TuP!",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "description": "An app to count car models or colors.",
+    "description": "Comptez tout ce qui vous passe par la tête : voitures, collections, bonnes actions, et bien plus encore. Créez autant de compteurs que vous le souhaitez et suivez vos progrès en un coup d'œil.",
     "icons": [
       {
-        "src": "icon.png",
+        "src": "./icon.png",
         "sizes": "192x192",
         "type": "image/png"
       }
-    ]
+    ],
+    "lang": "fr-FR",
+    "orientation": "portrait"
   }
   
