--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "TuP!",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "background_color": "#f7f6fb",
     "description": "Comptez tout ce qui vous passe par la tête : voitures, collections, bonnes actions, et bien plus encore. Créez autant de compteurs que vous le souhaitez et suivez vos progrès en un coup d'œil.",
     "icons": [
       {
