add maskable icon

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
       {
         "src": "./icon.png",
         "sizes": "256x256",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "maskable"
       }
     ],
     "lang": "fr-FR",
