Tailly to Tally

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Tailly Up!",
+    "name": "Tally Up!",
     "short_name": "TuP!",
     "start_url": "/",
     "display": "standalone",
