update try to install like APP

--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,21 @@
 {
-    "name": "Tally Up!",
-    "short_name": "TuP!",
-    "start_url": "./",
-    "display": "standalone",
-    "background_color": "#f7f6fb",
-    "description": "Comptez tout ce qui vous passe par la tête : voitures, collections, bonnes actions, et bien plus encore. Créez autant de compteurs que vous le souhaitez et suivez vos progrès en un coup d'œil.",
-    "icons": [
-      {
-        "src": "./icon.png",
-        "sizes": "256x256",
-        "type": "image/png",
-        "purpose": "maskable"
-      }
-    ],
-    "lang": "fr-FR",
-    "orientation": "portrait"
-  }
-  
+  "name": "Tally Up!",
+  "short_name": "TuP!",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#f7f6fb",
+  "theme_color": "#000000",
+  "description": "Comptez tout ce qui vous passe par la tête : voitures, collections, bonnes actions, et bien plus encore. Créez autant de compteurs que vous le souhaitez et suivez vos progrès en un coup d'œil.",
+  "icons": [
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
